--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -98,14 +98,17 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
-\input{cv/education.tex}
-\input{cv/skills.tex}
-\input{cv/experience.tex}
-\input{cv/extracurricular.tex}
-\input{cv/honors.tex}
-\input{cv/presentation.tex}
-\input{cv/writing.tex}
-\input{cv/committees.tex}
+\input{/cv/objective.tex}
+\input{/cv/areas_interest.tex}
+\input{/cv/skills.tex}
+\input{/cv/experience.tex}
+\input{/cv/education.tex}
+\input{/cv/rcoursework.tex}
+\input{/cv/procoursework.tex}
+\input{/cv/training.tex}
+\input{/cv/strenth.tex}
+\input{/cv/pinformation.tex}
+\input{/cv/declaration.tex}
 
 
 %-------------------------------------------------------------------------------
