updated cv files

--- a/examples/cv/committees.tex
+++ b/examples/cv/committees.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Program Committees}
+\cvsection{Professional Coursework}
 
 
 %-------------------------------------------------------------------------------
@@ -11,37 +11,30 @@
 
 %---------------------------------------------------------
   \cvhonor
-    {Problem Writer} % Position
-    {2016 CODEGATE Hacking Competition World Final} % Committee
-    {S.Korea} % Location
-    {2016} % Date(s)
+    {Red Hat Enterprise Linux} % Position
+    {Central Department of Computer Science and Information Technology} % Committee
+    {Kathmandu, Nepal} % Location
+    {2011} % Date(s)
 
 %---------------------------------------------------------
   \cvhonor
-    {Organizer \& Co-director} % Position
-    {1st POSTECH Hackathon} % Committee
-    {S.Korea} % Location
-    {2013} % Date(s)
+    {Java Programming} % Position
+    {Central Department of Computer Science and Information Technology} % Committee
+    {Kathmandu, Nepal} % Location
+    {2011} % Date(s)
 
 %---------------------------------------------------------
   \cvhonor
-    {Staff} % Position
-    {7th Hacking Camp} % Committee
-    {S.Korea} % Location
+    {C\#.net} % Position
+    {Central Department of Computer Science and Information Technology} % Committee
+    {Kathmandu, Nepal} % Location
     {2012} % Date(s)
 
 %---------------------------------------------------------
   \cvhonor
-    {Problem Writer} % Position
-    {1st Hoseo University Teenager Hacking Competition} % Committee
-    {S.Korea} % Location
-    {2012} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {Staff \& Problem Writer} % Position
-    {JFF(Just for Fun) Hacking Competition} % Committee
-    {S.Korea} % Location
+    {Oracle Database 10g} % Position
+    {Central Department of Computer Science and Information Technology} % Committee
+    {Kathmandu, Nepal} % Location
     {2012} % Date(s)
 
 %---------------------------------------------------------
