--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Education}
+\cvsection{EDUCATION}
 
 
 %-------------------------------------------------------------------------------
@@ -11,15 +11,18 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
-      \end{cvitems}
-    }
-
+    {M.Sc. in Computer Science and Information Technology} % Degree
+    {\href{http://cdcsit.edu.np/}{CDCSIT (Central Department of Computer Science and Information Technology)}, TU} % Institution
+    {Kirtipur, Kathmandu, Nepal} % Location
+    {2017} % Date(s)
+    {}  
+    
+%.........................................................  
+    \cventry
+    {B.Sc. in Computer Science} % Degree
+    {\href{https://amritcampus.edu.np/} {ASCOL (Amrit Science College)}, TU} % Institution
+    {Thamel, Kathmandu, Nepal} % Location
+    {2008} % Date(s)
+    {}
 %---------------------------------------------------------
 \end{cventries}
