--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -1,38 +1,45 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Skills}
+\cvsection{TECHNICAL SKILLS}
 
 
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvskills}
-
+%---------------------------------------------------------
+\cvskill
+{Key Work Areas} % Category
+{ASP.NET, MVC, Entity Framework, C\#, .NET, MS SQL, Javascript, WPF, Windows Form, ElectronJs, Desktop App} % Skills
 %---------------------------------------------------------
   \cvskill
-    {DevOps} % Category
-    {AWS, Docker, Kubernetes, Rancher, Vagrant, Packer, Terraform, Jenkins, CircleCI} % Skills
-
+    {Programming Landugages} % Category
+    {\textbf{C\#}, Java, Vb.net, Vb 6.0, C, C++, Prolog} % Skills
+    
+%---------------------------------------------------------
+ \cvskill
+{Framework} % Category
+{.net} % Skills
+  
 %---------------------------------------------------------
   \cvskill
-    {Back-end} % Category
-    {Koa, Express, Django, REST API} % Skills
-
+    {Databases} % Category
+    {\textbf{MS SQL}, Oracle 10\textsuperscript{g}, SQLite, MS Access} % Skills
+    
+ %---------------------------------------------------------
+   \cvskill
+ {Version Control Systems} % Category
+ {Git, \textbf{TFS}, SVN } % Skills
+ %---------------------------------------------------------
+ \cvskill
+ {Operating Systems} % Category
+ {\textbf{MS Windows}, Linux} % Skills
+ 
 %---------------------------------------------------------
-  \cvskill
-    {Front-end} % Category
-    {Hugo, Redux, React, HTML5, LESS, SASS} % Skills
-
-%---------------------------------------------------------
-  \cvskill
-    {Programming} % Category
-    {Node.js, Python, JAVA, OCaml, LaTeX} % Skills
-
-%---------------------------------------------------------
-  \cvskill
-    {Languages} % Category
-    {Korean, English, Japanese} % Skills
+\cvskill
+{Other Skills} % Category
+{\textbf{Adobe Photoshop CS4}, CorelDraw X3, \LaTeX, MS Office, MS Visio} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
