--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -1,139 +1,112 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Experience}
+\cvsection{EXPERIENCE}
 
 
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
-
+%---------------------------------------------------------
+\cventry
+{Software Engineer R\&D} % Job title
+{\href{https://asteroidventure.com/}{Asteroid Venture}} % Organization
+{Bakhundol, Pulchowk, Lalitpur} % Location
+{Mar 2018 to present} % Date(s)
+{
+	\begin{cvitems} % Description(s) of tasks/responsibilities
+		\item {Loan Automation System (Siddartha Bank Limited) – Running}
+		\begin{itemize}
+			\item {\textbf{Reporting}}
+				\item {\textbf{Security (User, Role management)}}
+		\end{itemize}
+		\item {Training (Deployer and Exporter)}
+		\begin{itemize}
+			\item {\textbf{Getting now code training of deployer and exporter of \href{https://www.tzunami.com/}{Tzunami Inc. Israel.}}}
+		\end{itemize}
+		%  \item {Won the 2nd prize in final evaluation.}
+	\end{cvitems}
+}
 %---------------------------------------------------------
   \cventry
-    {Software Architect} % Job title
-    {Omnious. Co., Ltd.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jun. 2017 - May 2018} % Date(s)
+    {.net Developer} % Job title
+    {\href{http://softechfoundation.com/}{Softech Foundation}} % Organization
+    {Dillibazar, Kathmandu, Nepal} % Location
+    {July 2015 to Dec 2015} % Date(s)
+    {
+    	\begin{cvitems} % Description(s) of tasks/responsibilities
+    		\item {Brikutimandap (for Bhrkutimandap, Widows Application)}
+    		\begin{itemize}
+    			\item {\textbf{Billing and Support}}
+    		\end{itemize}
+    		\item {SoftHMS (For Nepal Police Hospital)}
+    		\begin{itemize}
+    			\item {\textbf{Pathology Entry}}
+    		\end{itemize}
+    		%  \item {Won the 2nd prize in final evaluation.}
+    	\end{cvitems}
+    }
+ 
+%---------------------------------------------------------
+  \cventry
+    {.net Developer} % Job title
+    {\href{http://milestonesoftware.com.np/}{Milestone Software Private Limited}} % Organization
+    {Putalisadak, Kathmandu, Nepal} % Location
+    {Dec 2014 to Jun 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Provisioned an easily managable hybrid infrastructure(Amazon AWS + On-premise) utilizing IaC(Infrastructure as Code) tools like Ansible, Packer and Terraform.}
-        \item {Built fully automated CI/CD pipelines on CircleCI for containerized applications using Docker, AWS ECR and Rancher.}
-        \item {Designed an overall service architecture and pipelines of the Machine Learning based Fashion Tagging API SaaS product with the micro-services architecture.}
-        \item {Implemented several API microservices in Node.js Koa and in the serverless AWS Lambda functions.}
-        \item {Deployed a centralized logging environment(ELK, Filebeat, CloudWatch, S3) which gather log data from docker containers and AWS resources.}
-        \item {Deployed a centralized monitoring environment(Grafana, InfluxDB, CollectD) which gather system metrics as well as docker run-time metrics.}
+        \item {\href{http://202.45.144.216/}{Skill Development Project (SDP), CTEVT}}
+        \begin{itemize}
+        \item {\textbf{Reporting and supporting}}
+        \end{itemize}
+        \item {Restaurant Management System (RMS)}
+        \begin{itemize}
+        \item {\textbf{User, Billing, Inventory, Manage Products, Customer Order}}
+        \end{itemize}
+      %  \item {Won the 2nd prize in final evaluation.}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Co-founder \& Software Engineer} % Job title
-    {PLAT Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jan. 2016 - Jun. 2017} % Date(s)
+    {Support Engineer} % Job title
+    {Everest Commodity Exchange Ltd.} % Organization
+    {Balkhu, Kathmandu, Nepal} % Location
+    {May 2014 to Nov 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
-        \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
-        \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
-      \end{cvitems}
+        \item {Installing and configuring computer operating systems and applications.}
+        \item {Monitoring and maintaining computer systems and networks.}
+        \item{Discussion with staff or clients through a series of actions, either face-to-face or over the telephone, to help set up systems or resolve issues.}
+		\item{Providing support, including procedural documentation and relevant reports.}
+      \end{cvitems} 
     }
 
 %---------------------------------------------------------
   \cventry
-    {Researcher} % Job title
-    {Undergraduate Research, Machine Learning Lab(Prof. Seungjin Choi)} % Organization
-    {Pohang, S.Korea} % Location
-    {Mar. 2016 - Exp. Jun. 2017} % Date(s)
+    {.net Developer} % Job title
+    {Lubena Infomedia} % Organization
+    {Balkhu, Kathmandu, Nepal} % Location
+    {Jan 2014 to April 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Researched classification algorithms(SVM, CNN) to improve accuracy of human exercise recognition with wearable device.}
-        \item {Developed two TIZEN applications to collect sample data set and to recognize user exercise on SAMSUNG Gear S.}
+        \item {Courier}
+        \begin{itemize}
+        \item {\textbf{Security, Setup, Reporting, Transaction}}
+        \end{itemize}
+        \item {Library}
+        \begin{itemize}
+        \item {\textbf{Security, Reporting, Book Issue, Fine Management}}
+        \end{itemize}
+        \item {Academic Software}
+        \begin{itemize}
+        \item {\textbf{Reporting}}
+        \end{itemize}
+      %  \item {Won the 2nd prize in final evaluation.}
       \end{cvitems}
     }
 
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer \& Security Researcher (Compulsory Military Service)} % Job title
-    {R.O.K Cyber Command, MND} % Organization
-    {Seoul, S.Korea} % Location
-    {Aug. 2014 - Apr. 2016} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
-        \item {Implemented a distributed web stress test tool with high anonymity.}
-        \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Game Developer Intern at Global Internship Program} % Job title
-    {NEXON} % Organization
-    {Seoul, S.Korea \& LA, U.S.A} % Location
-    {Jan. 2013 - Feb. 2013} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market.}
-        \item {Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic and designed game graphics.}
-        \item {Won the 2nd prize in final evaluation.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Researcher for <Detecting video’s torrents using image similarity algorithms>} % Job title
-    {Undergraduate Research, Computer Vision Lab(Prof. Bohyung Han)} % Organization
-    {Pohang, S.Korea} % Location
-    {Sep. 2012 - Feb. 2013} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Researched means of retrieving a corresponding video based on image contents using image similarity algorithm.}
-        \item {Implemented prototype that users can obtain torrent magnet links of corresponding video relevant to an image on web site.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer Trainee} % Job title
-    {Software Maestro (funded by Korea Ministry of Knowledge and Economy)} % Organization
-    {Seoul, S.Korea} % Location
-    {Jul. 2012 - Jun. 2013} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Performed research memory management strategies of OS and implemented in Python an interactive simulator for Linux kernel memory management.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer} % Job title
-    {ShitOne Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Dec. 2011 - Feb. 2012} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed a proxy drive smartphone application which connects proxy driver and customer. Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Freelance Penetration Tester} % Job title
-    {SAMSUNG Electronics} % Organization
-    {S.Korea} % Location
-    {Sep. 2013, Mar. 2011 - Oct. 2011} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Conducted penetration testing on SAMSUNG KNOX, which is solution for enterprise mobile security.}
-        \item {Conducted penetration testing on SAMSUNG Smart TV.}
-      \end{cvitems}
-      %\begin{cvsubentries}
-      %  \cvsubentry{}{KNOX(Solution for Enterprise Mobile Security) Penetration Testing}{Sep. 2013}{}
-      %  \cvsubentry{}{Smart TV Penetration Testing}{Mar. 2011 - Oct. 2011}{}
-      %\end{cvsubentries}
-    }
 
 %---------------------------------------------------------
 \end{cventries}
