--- a/examples/cv/honors.tex
+++ b/examples/cv/honors.tex
@@ -1,13 +1,13 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Honors \& Awards}
+\cvsection{Professional Coursework}
 
 
 %-------------------------------------------------------------------------------
 %	SUBSECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsubsection{International}
+\cvsubsection{Red Hat Enterprise Linux}
 
 
 %-------------------------------------------------------------------------------
@@ -16,55 +16,19 @@
 \begin{cvhonors}
 
 %---------------------------------------------------------
-  \cvhonor
-    {Finalist} % Award
-    {DEFCON 26th CTF Hacking Competition World Final} % Event
-    {Las Vegas, U.S.A} % Location
-    {2018} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {Finalist} % Award
-    {DEFCON 25th CTF Hacking Competition World Final} % Event
-    {Las Vegas, U.S.A} % Location
-    {2017} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {Finalist} % Award
-    {DEFCON 22nd CTF Hacking Competition World Final} % Event
-    {Las Vegas, U.S.A} % Location
-    {2014} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {Finalist} % Award
-    {DEFCON 21st CTF Hacking Competition World Final} % Event
-    {Las Vegas, U.S.A} % Location
-    {2013} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {Finalist} % Award
-    {DEFCON 19th CTF Hacking Competition World Final} % Event
-    {Las Vegas, U.S.A} % Location
+  \cvhonor    
+    {Central Department of Computer Science and Information Technology} % Event
+    {TU} % Award
+    {Kathmandu, Nepal} % Location
     {2011} % Date(s)
 
-%---------------------------------------------------------
-  \cvhonor
-    {6th Place} % Award
-    {SECUINSIDE Hacking Competition World Final} % Event
-    {Seoul, S.Korea} % Location
-    {2012} % Date(s)
 
 %---------------------------------------------------------
 \end{cvhonors}
 
-
-%-------------------------------------------------------------------------------
 %	SUBSECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsubsection{Domestic}
+\cvsubsection{Java Programming}
 
 
 %-------------------------------------------------------------------------------
@@ -73,60 +37,52 @@
 \begin{cvhonors}
 
 %---------------------------------------------------------
-  \cvhonor
-    {3rd Place} % Award
-    {WITHCON Hacking Competition Final} % Event
-    {Seoul, S.Korea} % Location
-    {2015} % Date(s)
+  \cvhonor    
+    {Central Department of Computer Science and Information Technology} % Event
+    {TU} % Award
+    {Kathmandu, Nepal} % Location
+    {2011} % Date(s)
+
 
 %---------------------------------------------------------
-  \cvhonor
-    {Silver Prize} % Award
-    {KISA HDCON Hacking Competition Final} % Event
-    {Seoul, S.Korea} % Location
-    {2017} % Date(s)
+\end{cvhonors}
+%	SUBSECTION TITLE
+%-------------------------------------------------------------------------------
+\cvsubsection{C\#.net}
+
+
+%-------------------------------------------------------------------------------
+%	CONTENT
+%-------------------------------------------------------------------------------
+\begin{cvhonors}
 
 %---------------------------------------------------------
-  \cvhonor
-    {Silver Prize} % Award
-    {KISA HDCON Hacking Competition Final} % Event
-    {Seoul, S.Korea} % Location
-    {2013} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {2nd Award} % Award
-    {HUST Hacking Festival} % Event
-    {S.Korea} % Location
-    {2013} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {3rd Award} % Award
-    {HUST Hacking Festival} % Event
-    {S.Korea} % Location
-    {2010} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {3rd Award} % Award
-    {Holyshield 3rd Hacking Festival} % Event
-    {S.Korea} % Location
+  \cvhonor    
+    {Central Department of Computer Science and Information Technology} % Event
+    {TU} % Award
+    {Kathmandu, Nepal} % Location
     {2012} % Date(s)
 
-%---------------------------------------------------------
-  \cvhonor
-    {2nd Award} % Award
-    {Holyshield 3rd Hacking Festival} % Event
-    {S.Korea} % Location
-    {2011} % Date(s)
 
 %---------------------------------------------------------
-  \cvhonor
-    {5th Place} % Award
-    {PADOCON Hacking Competition Final} % Event
-    {Seoul, S.Korea} % Location
-    {2011} % Date(s)
+\end{cvhonors}
+%	SUBSECTION TITLE
+%-------------------------------------------------------------------------------
+\cvsubsection{ Oracle Database 10g}
+
+
+%-------------------------------------------------------------------------------
+%	CONTENT
+%-------------------------------------------------------------------------------
+\begin{cvhonors}
+
+%---------------------------------------------------------
+  \cvhonor    
+    {Central Department of Computer Science and Information Technology} % Event
+    {TU} % Award
+    {Kathmandu, Nepal} % Location
+    {2012} % Date(s)
+
 
 %---------------------------------------------------------
 \end{cvhonors}
