--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -52,22 +52,28 @@
 %	PERSONAL INFORMATION
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
+\hypersetup{%
+	pdftitle={Mahesh Kr. Yadav - CV},
+	pdfauthor={Mahesh Kr. Yadav},
+	pdfsubject={CV},
+	pdfkeywords={CV}
+}
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo{./examples/profile.png}
-\name{Claud D.}{Park}
-\position{Software Architect{\enskip\cdotp\enskip}Security Expert}
-\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
+\name{Mahesh Kr.}{Yadav}
+\position{Software Engineer R\&D}%{\enskip\cdotp\enskip}Security Expert}
+\address{Kirtipur, Kathmandu, Nepal}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
+\mobile{(+977) 9840060484} 
+\email{contact@maheshyadav.com.np}
 %\dateofbirth{January 1st, 1970}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\homepage{cv.maheshyadav.com.np}
+%\github{posquit0}
+\linkedin{maheshdharhari}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
-% \skype{skype-id}
+\skype{maheshdharhari}
 % \reddit{reddit-id}
 % \medium{medium-id}
 % \kaggle{kaggle-id}
@@ -76,7 +82,7 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra information}
 
-\quote{``Be the change that you want to see in the world."}
+%\quote{``Be the change that you want to see in the world."}
 
 
 %-------------------------------------------------------------------------------
