updated cv.tex footer updated

--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -96,7 +96,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Claud D. Park~~~·~~~Curriculum Vitae}
+  {Mahesh Kr. Yadav~~~·~~~Curriculum Vitae}
   {\thepage}
 
 
