Made Git bold and changed 'TFC' to 'TFVC'

--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -30,7 +30,7 @@
  %---------------------------------------------------------
    \cvskill
  {Version Control Systems} % Category
- {Git, \textbf{TFS}, SVN } % Skills
+ {\textbf{Git}, \textbf{TFVC}, SVN } % Skills
  %---------------------------------------------------------
  \cvskill
  {Operating Systems} % Category
