--- a/examples/coverletter0.tex
+++ b/examples/coverletter0.tex
@@ -89,7 +89,7 @@
 %%% Make a footer for CV with three arguments(<left>, <center>, <right>)
 \makecvfooter
   {\today}
-  {Claud D. Park~~~·~~~Cover Letter}
+  {Mahesh Kr. Yadav~~~·~~~Cover Letter}
   {}
 
 \begin{document}
