coverletter0 position updated

--- a/examples/coverletter0.tex
+++ b/examples/coverletter0.tex
@@ -53,7 +53,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Essentials
 \name{Mahesh Kr.}{Yadav}
-\position{.net Developer}%{\enskip\cdotp\enskip}Security Expert}
+\position{Software Engineer R\&D}%{\enskip\cdotp\enskip}Security Expert}
 \address{Kirtipur, Kathmandu, Nepal}
 
 \mobile{(+977) 9840060484} 
