--- a/examples/cv/declaration.tex
+++ b/examples/cv/declaration.tex
@@ -14,7 +14,7 @@ and belief.
    
 \hfill \textbf{Mahesh Kr. Yadav}
 \begin{flushright}
-\today
+\today \currenttime
 \end{flushright}
 %---------------------------------------------------------
 \end{cvparagraph}
