removed current time from declaration.tex

--- a/examples/cv/declaration.tex
+++ b/examples/cv/declaration.tex
@@ -14,7 +14,7 @@ and belief.
    
 \hfill \textbf{Mahesh Kr. Yadav}
 \begin{flushright}
-\today \currenttime
+\today
 \end{flushright}
 %---------------------------------------------------------
 \end{cvparagraph}
