updated header and opening

--- a/examples/maheshCoverLetter.tex
+++ b/examples/maheshCoverLetter.tex
@@ -71,11 +71,11 @@
 %     Letter Data (Cover Letter)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \recipient
-  {Company Recruitment Team}
-  {Google Inc.\\1600 Amphitheatre Parkway\\Mountain View, CA 94043}
+  {Head of Office Administration}
+  {Dewahi Gonahi Municipality \\Prempur Gonahi, Rautahat}
 \letterdate{\today}
 \lettertitle{Job Application for Software Engineer}
-\letteropening{Dear Mr./Ms./Dr. LastName,}
+\letteropening{Dear Sir/Madam,}
 \letterclosing{Sincerely,}
 \letterenclosure[Attached]{Curriculum Vitae}
 
