--- a/examples/personalData.tex
+++ b/examples/personalData.tex
@@ -1,17 +1,21 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     Personal Data
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Essentials
+%-------------------------------------------------------------------------------
+%	PERSONAL INFORMATION
+%	Comment any of the lines below if they are not required
+%-------------------------------------------------------------------------------
+% Available options: circle|rectangle,edge/noedge,left/right
+% \photo{./examples/profile.png}
 \name{Mahesh Kr.}{Yadav}
-\position{Software Engineer R\&D}%{\enskip\cdotp\enskip}Security Expert}
+%\position{Software Engineer{\enskip\cdotp\enskip}Security Expert}
 \address{Kirtipur, Kathmandu, Nepal}
 
 \mobile{(+977) 9840060484} 
 \email{contact@maheshyadav.com.np}
-\homepage{cv.maheshyadav.com.np}
+\homepage{www.maheshyadav.com.np}
 %\github{posquit0}
 \linkedin{maheshdharhari}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
 \skype{maheshdharhari}
+% \reddit{reddit-id}
+% \extrainfo{extra informations}
