--- a/examples/personalData.tex
+++ b/examples/personalData.tex
@@ -19,3 +19,5 @@
 \skype{maheshdharhari}
 % \reddit{reddit-id}
 % \extrainfo{extra informations}
+
+%\quote{``Be the change that you want to see in the world."}
