used \include{examples/personalData.tex}
used \include{examples/personalData.tex} in maheshCoverLetter.tex

--- a/examples/maheshCoverLetter.tex
+++ b/examples/maheshCoverLetter.tex
@@ -45,26 +45,7 @@
 	pdfsubject={Cover Letter},
 	pdfkeywords={Cover Letter}
 }
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     Personal Data
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Essentials
-\name{Mahesh Kr.}{Yadav}
-\position{Software Engineer R\&D}%{\enskip\cdotp\enskip}Security Expert}
-\address{Kirtipur, Kathmandu, Nepal}
-
-\mobile{(+977) 9840060484} 
-\email{contact@maheshyadav.com.np}
-\homepage{cv.maheshyadav.com.np}
-%\github{posquit0}
-\linkedin{maheshdharhari}
-% \gitlab{gitlab-id}
-% \stackoverflow{SO-id}{SO-name}
-% \twitter{@twit}
-\skype{maheshdharhari}
-%%% Optionals
-%\position{Software Engineer{\enskip\cdotp\enskip}Security Expert}
-%\quote{``Make the change that you want to see in the world."}
+\include{examples/personalData.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
