--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -24,14 +24,14 @@
 		\begin{itemize}
 			\item {build a comprehensive, extensible, feature-rich utility tool for analysis of ECM system's data from the context of data migration to SharePoint capable of presenting the result in various graphical formats as well as exporting int0 tabular formats (excel, CSV)}
 		\end{itemize}
-		\item {Tzunami Deployer}
+		\item {\textbf{\href{https://tzunami.com/}{Tzunami Deployer}}
 		\begin{itemize}
 			\item {Tzunami Deployer is the leading service provider of Sharepoint content migration tools, supporting migration from a wide range of ECM (Enterprise Content Management) systems to Sharepoint and customized Sharepoint migration tools.}
 		\end{itemize}
-		\item {Loan Automation System (Siddartha Bank Limited)}
+		\item {\textbf{Loan Automation System} (Siddartha Bank Limited)}
 		\begin{itemize}
-			\item {\textbf{Reporting}}
-				\item {\textbf{Security (User, Role management)}}
+			\item {Reporting}
+			\item {Security (User, Role management)}
 		\end{itemize}
 		%  \item {Won the 2nd prize in final evaluation.}
 	\end{cvitems}
