--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -15,16 +15,16 @@
 {Bakhundol, Pulchowk, Lalitpur} % Location
 {Mar 2018 to present} % Date(s)
 {
-	\begin{cvitems} % Description(s) of tasks/responsibilities		
-		\item {\textbf{ \href{https://tzunami.com/opentext-content-server/}{Tzunami OpenText Content Server Exporter}}}
+\begin{cvitems} % Description(s) of tasks/responsibilities		
+		\item {\textbf{\href{https://tzunami.com/opentext-content-server/}{Tzunami OpenText Content Server Exporter}}}
 		\begin{itemize}
 			\item {It is easy-to-use and convenient solution to extract content from 'OpenText Content Server' via REST API. 'OpenText Content Server' migration solution allows extraction of all content within your local infrastructure. With the ability to connect remotely to the 'OpenText Content Server'}
 		\end{itemize}
-		\item {\textbf{ \href{https://tzunami.com/pre-migration-analysis/}{Tzunami Pre-Migration Analyzer}}}
+		\item {\textbf{\href{https://tzunami.com/pre-migration-analysis/}{Tzunami Pre-Migration Analyzer}}}
 		\begin{itemize}
 			\item {build a comprehensive, extensible, feature-rich utility tool for analysis of ECM system's data from the context of data migration to SharePoint capable of presenting the result in various graphical formats as well as exporting int0 tabular formats (excel, CSV)}
 		\end{itemize}
-		\item {\textbf{\href{https://tzunami.com/}{Tzunami Deployer}}
+		\item {\textbf{\href{https://tzunami.com/}{Tzunami Deployer}}}
 		\begin{itemize}
 			\item {Tzunami Deployer is the leading service provider of Sharepoint content migration tools, supporting migration from a wide range of ECM (Enterprise Content Management) systems to Sharepoint and customized Sharepoint migration tools.}
 		\end{itemize}
