Zero to o updated in premigration desc

--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -22,7 +22,7 @@
 		\end{itemize}
 		\item {\textbf{\href{https://tzunami.com/pre-migration-analysis/}{Tzunami Pre-Migration Analyzer}}}
 		\begin{itemize}
-			\item {build a comprehensive, extensible, feature-rich utility tool for analysis of ECM system's data from the context of data migration to SharePoint capable of presenting the result in various graphical formats as well as exporting int0 tabular formats (excel, CSV)}
+			\item {build a comprehensive, extensible, feature-rich utility tool for analysis of ECM system's data from the context of data migration to SharePoint capable of presenting the result in various graphical formats as well as exporting into tabular formats (excel, CSV)}
 		\end{itemize}
 		\item {\textbf{\href{https://tzunami.com/}{Tzunami Deployer}}}
 		\begin{itemize}
