itemize itemsep 0em

--- a/examples/cv/strenth.tex
+++ b/examples/cv/strenth.tex
@@ -11,10 +11,11 @@
 
 %---------------------------------------------------------
  \begin{itemize}
- 	\item Dedicated, Flexible and friendly personality.
- 	\item Positive attitude towards the responsibilities and ready to accept challenges.
- 	\item Excellent analytical and decision-making skills.
- 	\item Problem Solving and Professional attitude with sincerity and hard work.
+   \setlength\itemsep{0em}
+ 	  \item Dedicated, Flexible and friendly personality.
+ 	  \item Positive attitude towards the responsibilities and ready to accept challenges.
+ 	  \item Excellent analytical and decision-making skills.
+ 	  \item Problem Solving and Professional attitude with sincerity and hard work.
  \end{itemize}
 %---------------------------------------------------------
 \end{cvparagraph}
