--- a/examples/cv/strenth.tex
+++ b/examples/cv/strenth.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
  \begin{itemize}
-   \setlength\itemsep{0em}
+   \setlength{\parindent}{0pt}
  	  \item Dedicated, Flexible and friendly personality.
  	  \item Positive attitude towards the responsibilities and ready to accept challenges.
  	  \item Excellent analytical and decision-making skills.
