--- a/examples/cv/strenth.tex
+++ b/examples/cv/strenth.tex
@@ -11,7 +11,8 @@
 
 %---------------------------------------------------------
  \begin{itemize}
-   \setlength{\parindent}{0pt}
+   \setlength{\parskip}{0pt}
+  \setlength{\itemsep}{0pt plus 1pt}
  	  \item Dedicated, Flexible and friendly personality.
  	  \item Positive attitude towards the responsibilities and ready to accept challenges.
  	  \item Excellent analytical and decision-making skills.
