Bolder all projects

--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -44,13 +44,13 @@
     {July 2015 to Dec 2015} % Date(s)
     {
     	\begin{cvitems} % Description(s) of tasks/responsibilities
-    		\item {Brikutimandap (for Bhrkutimandap, Widows Application)}
+    		\item {\textbf{Brikutimandap} (for Bhrkutimandap, Widows Application)}
     		\begin{itemize}
-    			\item {\textbf{Billing and Support}}
+    			\item {Billing and Support}
     		\end{itemize}
-    		\item {SoftHMS (For Nepal Police Hospital)}
+    		\item {\textbf{SoftHMS} (Nepal Police Hospital)}
     		\begin{itemize}
-    			\item {\textbf{Pathology Entry}}
+    			\item {Pathology Entry}
     		\end{itemize}
     		%  \item {Won the 2nd prize in final evaluation.}
     	\end{cvitems}
@@ -64,13 +64,13 @@
     {Dec 2014 to Jun 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {\href{http://202.45.144.216/}{Skill Development Project (SDP), CTEVT}}
+        \item \textbf{{\href{http://202.45.144.216/}{Skill Development Project (SDP), CTEVT}}}
         \begin{itemize}
-        \item {\textbf{Reporting and supporting}}
+        \item {Reporting and supporting}
         \end{itemize}
-        \item {Restaurant Management System (RMS)}
+        \item \textbf{{Restaurant Management System (RMS)}}
         \begin{itemize}
-        \item {\textbf{User, Billing, Inventory, Manage Products, Customer Order}}
+        \item {User, Billing, Inventory, Manage Products, Customer Order}
         \end{itemize}
       %  \item {Won the 2nd prize in final evaluation.}
       \end{cvitems}
