Lubena Infomedia Project bolded

--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -99,18 +99,10 @@
     {Jan 2014 to April 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Courier}
+        \item {\textbf{Courier} (National Air Courier Service P Ltd)}}
         \begin{itemize}
-        \item {\textbf{Security, Setup, Reporting, Transaction}}
-        \end{itemize}
-        \item {Library}
-        \begin{itemize}
-        \item {\textbf{Security, Reporting, Book Issue, Fine Management}}
-        \end{itemize}
-        \item {Academic Software}
-        \begin{itemize}
-        \item {\textbf{Reporting}}
-        \end{itemize}
+        \item {Security, Setup, Reporting, Transaction}
+        \end{itemize}      
       %  \item {Won the 2nd prize in final evaluation.}
       \end{cvitems}
     }
