--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -99,7 +99,7 @@
     {Jan 2014 to April 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {\textbf{Courier} (National Air Courier Service P Ltd)}}
+        \item {\textbf{Courier} (National Air Courier Service P Ltd)}
         \begin{itemize}
         \item {Security, Setup, Reporting, Transaction}
         \end{itemize}      
