--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -44,7 +44,7 @@
     {July 2015 to Dec 2015} % Date(s)
     {
     	\begin{cvitems} % Description(s) of tasks/responsibilities
-    		\item {\textbf{Brikutimandap} (for Bhrkutimandap, Widows Application)}
+    		\item {\textbf{Brikutimandap} (Bhrkutimandap, Widows Application)}
     		\begin{itemize}
     			\item {Billing and Support}
     		\end{itemize}
@@ -99,7 +99,7 @@
     {Jan 2014 to April 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {\textbf{Courier} (National Air Courier Service P Ltd)}
+        \item {\textbf{Courier} (National Air Courier Service Pvt Ltd)}
         \begin{itemize}
         \item {Security, Setup, Reporting, Transaction}
         \end{itemize}      
