--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -20,15 +20,15 @@
 		\begin{itemize}
 			\item {It is easy-to-use and convenient solution to extract content from 'OpenText Content Server' via REST API. 'OpenText Content Server' migration solution allows extraction of all content within your local infrastructure. With the ability to connect remotely to the 'OpenText Content Server'}
 		\end{itemize}
-		\item {\textbf{\href{https://tzunami.com/pre-migration-analysis/}{Tzunami Pre-Migration Analyzer}}}
+		\item {\textbf{\href{https://tzunami.com/pre-migration-analysis/}{Tzunami Pre-Migration Analyzer}}\textsubscript{WPF, Prism}}
 		\begin{itemize}
 			\item {build a comprehensive, extensible, feature-rich utility tool for analysis of ECM system's data from the context of data migration to SharePoint capable of presenting the result in various graphical formats as well as exporting into tabular formats (excel, CSV)}
 		\end{itemize}
-		\item {\textbf{\href{https://tzunami.com/}{Tzunami Deployer}}}
+		\item {\textbf{\href{https://tzunami.com/}{Tzunami Deployer}}\textsubscript{Windows Forms}}
 		\begin{itemize}
 			\item {Tzunami Deployer is the leading service provider of Sharepoint content migration tools, supporting migration from a wide range of ECM (Enterprise Content Management) systems to Sharepoint and customized Sharepoint migration tools.}
 		\end{itemize}
-		\item {\textbf{Loan Automation System} (Siddartha Bank Limited)}
+		\item {\textbf{Loan Automation System} (Siddartha Bank Limited)\textsubscript{MVC}}
 		\begin{itemize}
 			\item {Reporting}
 			\item {Security (User, Role management)}
@@ -44,11 +44,11 @@
     {July 2015 to Dec 2015} % Date(s)
     {
     	\begin{cvitems} % Description(s) of tasks/responsibilities
-    		\item {\textbf{Brikutimandap} (Bhrkutimandap, Widows Application)}
+    		\item {\textbf{Brikutimandap}\textsubscript{Windows Forms} (Bhrkutimandap, Widows Application)}
     		\begin{itemize}
     			\item {Billing and Support}
     		\end{itemize}
-    		\item {\textbf{SoftHMS} (Nepal Police Hospital)}
+    		\item {\textbf{SoftHMS}\textsubscript{Asp.net} (Nepal Police Hospital)}
     		\begin{itemize}
     			\item {Pathology Entry}
     		\end{itemize}
@@ -64,11 +64,11 @@
     {Dec 2014 to Jun 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item \textbf{{\href{http://202.45.144.216/}{Skill Development Project (SDP), CTEVT}}}
+        \item \textbf{{\href{http://202.45.144.216/}{Skill Development Project (SDP), CTEVT}}\textsubscript{Asp.net}}
         \begin{itemize}
         \item {Reporting and supporting}
         \end{itemize}
-        \item \textbf{{Restaurant Management System (RMS)}}
+        \item \textbf{{Restaurant Management System (RMS)}\textsubscript{Asp.net}}
         \begin{itemize}
         \item {User, Billing, Inventory, Manage Products, Customer Order}
         \end{itemize}
@@ -99,7 +99,7 @@
     {Jan 2014 to April 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {\textbf{Courier} (National Air Courier Service Pvt Ltd)}
+        \item {\textbf{Courier}\textsubscript{Asp.net} (National Air Courier Service Pvt Ltd)}
         \begin{itemize}
         \item {Security, Setup, Reporting, Transaction}
         \end{itemize}      
