replaced Asp.net with ASP.NET

--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -28,7 +28,7 @@
 		\begin{itemize}
 			\item {Tzunami Deployer is the leading service provider of Sharepoint content migration tools, supporting migration from a wide range of ECM (Enterprise Content Management) systems to Sharepoint and customized Sharepoint migration tools.}
 		\end{itemize}
-		\item {\textbf{Loan Automation System} (Siddartha Bank Limited)\textsubscript{MVC}}
+		\item {\textbf{Loan Automation System}\textsubscript{MVC} (Siddartha Bank Limited)}
 		\begin{itemize}
 			\item {Reporting}
 			\item {Security (User, Role management)}
@@ -44,11 +44,11 @@
     {July 2015 to Dec 2015} % Date(s)
     {
     	\begin{cvitems} % Description(s) of tasks/responsibilities
-    		\item {\textbf{Brikutimandap}\textsubscript{Windows Forms} (Bhrkutimandap, Widows Application)}
+    		\item {\textbf{Brikutimandap}\textsubscript{Windows Forms} (Bhrkutimandap)}
     		\begin{itemize}
     			\item {Billing and Support}
     		\end{itemize}
-    		\item {\textbf{SoftHMS}\textsubscript{Asp.net} (Nepal Police Hospital)}
+    		\item {\textbf{SoftHMS}\textsubscript{ASP.NET} (Nepal Police Hospital)}
     		\begin{itemize}
     			\item {Pathology Entry}
     		\end{itemize}
@@ -64,11 +64,11 @@
     {Dec 2014 to Jun 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item \textbf{{\href{http://202.45.144.216/}{Skill Development Project (SDP), CTEVT}}\textsubscript{Asp.net}}
+        \item \textbf{{\href{http://202.45.144.216/}{Skill Development Project (SDP), CTEVT}}\textsubscript{ASP.NET}}
         \begin{itemize}
         \item {Reporting and supporting}
         \end{itemize}
-        \item \textbf{{Restaurant Management System (RMS)}\textsubscript{Asp.net}}
+        \item \textbf{{Restaurant Management System (RMS)}\textsubscript{ASP.NET}}
         \begin{itemize}
         \item {User, Billing, Inventory, Manage Products, Customer Order}
         \end{itemize}
@@ -99,7 +99,7 @@
     {Jan 2014 to April 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {\textbf{Courier}\textsubscript{Asp.net} (National Air Courier Service Pvt Ltd)}
+        \item {\textbf{Courier}\textsubscript{ASP.NET} (National Air Courier Service Pvt Ltd)}
         \begin{itemize}
         \item {Security, Setup, Reporting, Transaction}
         \end{itemize}      
