unbolded Milestone projects

--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -64,11 +64,11 @@
     {Dec 2014 to Jun 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item \textbf{{\href{http://202.45.144.216/}{Skill Development Project (SDP), CTEVT}}\textsubscript{ASP.NET}}
+        \item \textbf{\href{http://202.45.144.216/}{Skill Development Project (SDP), CTEVT}}\textsubscript{ASP.NET}
         \begin{itemize}
         \item {Reporting and supporting}
         \end{itemize}
-        \item \textbf{{Restaurant Management System (RMS)}\textsubscript{ASP.NET}}
+        \item \textbf{Restaurant Management System (RMS)}\textsubscript{ASP.NET}
         \begin{itemize}
         \item {User, Billing, Inventory, Manage Products, Customer Order}
         \end{itemize}
