S capital of JavaScript in project

--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -28,7 +28,7 @@
 		\begin{itemize}
 			\item {Tzunami Deployer is the leading service provider of Sharepoint content migration tools, supporting migration from a wide range of ECM (Enterprise Content Management) systems to Sharepoint and customized Sharepoint migration tools.}
 		\end{itemize}
-		\item {\textbf{Loan Automation System}\textsubscript{MVC, Javascript} (Siddartha Bank Limited)}
+		\item {\textbf{Loan Automation System}\textsubscript{MVC, JavaScript} (Siddartha Bank Limited)}
 		\begin{itemize}
 			\item {Reporting}
 			\item {Security (User, Role management)}
@@ -48,7 +48,7 @@
     		\begin{itemize}
     			\item {Billing and Support}
     		\end{itemize}
-    		\item {\textbf{SoftHMS}\textsubscript{ASP.NET,Javascript} (Nepal Police Hospital)}
+    		\item {\textbf{SoftHMS}\textsubscript{ASP.NET,JavaScript} (Nepal Police Hospital)}
     		\begin{itemize}
     			\item {Pathology Entry}
     		\end{itemize}
@@ -64,11 +64,11 @@
     {Dec 2014 to Jun 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item \textbf{\href{http://202.45.144.216/}{Skill Development Project (SDP), CTEVT}}\textsubscript{ASP.NET, Javascript}
+        \item \textbf{\href{http://202.45.144.216/}{Skill Development Project (SDP), CTEVT}}\textsubscript{ASP.NET, JavaScript}
         \begin{itemize}
         \item {Reporting and supporting}
         \end{itemize}
-        \item \textbf{Restaurant Management System (RMS)}\textsubscript{ASP.NET, Javascript}
+        \item \textbf{Restaurant Management System (RMS)}\textsubscript{ASP.NET, JavaScript}
         \begin{itemize}
         \item {User, Billing, Inventory, Manage Products, Customer Order}
         \end{itemize}
