--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -11,7 +11,7 @@
 %---------------------------------------------------------
 \cvskill
 {Key Work Areas} % Category
-{C\#, .NET, WPF, Windows Forms, ASP.NET, MVC, Entity Framework, MS SQL, Javascript, ElectronJs, Desktop App} % Skills
+{C\#, .NET, WPF, Windows Forms, ASP.NET, MVC, Entity Framework, MS SQL, JavaScript, ElectronJs, Desktop App} % Skills
 %---------------------------------------------------------
   \cvskill
     {Programming Landugages} % Category
