--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -16,11 +16,11 @@
 {Mar 2018 to present} % Date(s)
 {
 \begin{cvitems} % Description(s) of tasks/responsibilities		
-		\item {\textbf{\href{https://tzunami.com/opentext-content-server/}{Tzunami OpenText Content Server Exporter}}\textsubscript{Windows Forms}}
+		\item {\textbf{\href{https://tzunami.com/opentext-content-server/}{Tzunami OpenText Content Server Exporter}}\textsubscript{Windows Forms, Rest API}}
 		\begin{itemize}
 			\item {It is easy-to-use and convenient solution to extract content from 'OpenText Content Server' via REST API. 'OpenText Content Server' migration solution allows extraction of all content within your local infrastructure. With the ability to connect remotely to the 'OpenText Content Server'}
 		\end{itemize}
-		\item {\textbf{\href{https://tzunami.com/pre-migration-analysis/}{Tzunami Pre-Migration Analyzer}}\textsubscript{WPF, Prism}}
+		\item {\textbf{\href{https://tzunami.com/pre-migration-analysis/}{Tzunami Pre-Migration Analyzer}}\textsubscript{WPF, Prism, SQL, Rest API}}
 		\begin{itemize}
 			\item {build a comprehensive, extensible, feature-rich utility tool for analysis of ECM system's data from the context of data migration to SharePoint capable of presenting the result in various graphical formats as well as exporting into tabular formats (excel, CSV)}
 		\end{itemize}
@@ -28,7 +28,7 @@
 		\begin{itemize}
 			\item {Tzunami Deployer is the leading service provider of Sharepoint content migration tools, supporting migration from a wide range of ECM (Enterprise Content Management) systems to Sharepoint and customized Sharepoint migration tools.}
 		\end{itemize}
-		\item {\textbf{Loan Automation System}\textsubscript{MVC, JavaScript} (Siddartha Bank Limited)}
+		\item {\textbf{Loan Automation System}\textsubscript{MVC, JavaScript, MS SQL} (Siddartha Bank Limited)}
 		\begin{itemize}
 			\item {Reporting}
 			\item {Security (User, Role management)}
@@ -48,7 +48,7 @@
     		\begin{itemize}
     			\item {Billing and Support}
     		\end{itemize}
-    		\item {\textbf{SoftHMS}\textsubscript{ASP.NET,JavaScript} (Nepal Police Hospital)}
+    		\item {\textbf{SoftHMS}\textsubscript{ASP.NET,JavaScript, MS SQL} (Nepal Police Hospital)}
     		\begin{itemize}
     			\item {Pathology Entry}
     		\end{itemize}
@@ -64,7 +64,7 @@
     {Dec 2014 to Jun 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item \textbf{\href{http://202.45.144.216/}{Skill Development Project (SDP), CTEVT}}\textsubscript{ASP.NET, JavaScript}
+        \item \textbf{\href{http://202.45.144.216/}{Skill Development Project (SDP), CTEVT}}\textsubscript{ASP.NET, JavaScript, MS SQL}
         \begin{itemize}
         \item {Reporting and supporting}
         \end{itemize}
@@ -99,7 +99,7 @@
     {Jan 2014 to April 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {\textbf{Courier}\textsubscript{ASP.NET} (National Air Courier Service Pvt Ltd)}
+        \item {\textbf{Courier}\textsubscript{ASP.NET, MS SQL} (National Air Courier Service Pvt Ltd)}
         \begin{itemize}
         \item {Security, Setup, Reporting, Transaction}
         \end{itemize}      
