--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -16,7 +16,7 @@
 {Mar 2018 to present} % Date(s)
 {
 \begin{cvitems} % Description(s) of tasks/responsibilities		
-		\item {\textbf{\href{https://tzunami.com/opentext-content-server/}{Tzunami OpenText Content Server Exporter}}\textsubscript{Windows Forms, Rest API}}
+		\item {\textbf{\href{https://tzunami.com/opentext-content-server/}{Tzunami OpenText Content Server Exporter}}\textsubscript{WinForms, Rest API}}
 		\begin{itemize}
 			\item {It is easy-to-use and convenient solution to extract content from 'OpenText Content Server' via REST API. 'OpenText Content Server' migration solution allows extraction of all content within your local infrastructure. With the ability to connect remotely to the 'OpenText Content Server'}
 		\end{itemize}
@@ -24,7 +24,7 @@
 		\begin{itemize}
 			\item {build a comprehensive, extensible, feature-rich utility tool for analysis of ECM system's data from the context of data migration to SharePoint capable of presenting the result in various graphical formats as well as exporting into tabular formats (excel, CSV)}
 		\end{itemize}
-		\item {\textbf{\href{https://tzunami.com/}{Tzunami Deployer}}\textsubscript{Windows Forms}}
+		\item {\textbf{\href{https://tzunami.com/}{Tzunami Deployer}}\textsubscript{WinForms}}
 		\begin{itemize}
 			\item {Tzunami Deployer is the leading service provider of Sharepoint content migration tools, supporting migration from a wide range of ECM (Enterprise Content Management) systems to Sharepoint and customized Sharepoint migration tools.}
 		\end{itemize}
@@ -44,7 +44,7 @@
     {July 2015 to Dec 2015} % Date(s)
     {
     	\begin{cvitems} % Description(s) of tasks/responsibilities
-    		\item {\textbf{Brikutimandap}\textsubscript{Windows Forms} (Bhrkutimandap)}
+    		\item {\textbf{Brikutimandap}\textsubscript{WinForms} (Bhrkutimandap)}
     		\begin{itemize}
     			\item {Billing and Support}
     		\end{itemize}
