--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -16,11 +16,11 @@
 {Mar 2018 to present} % Date(s)
 {
 \begin{cvitems} % Description(s) of tasks/responsibilities		
-		\item {\textbf{\href{https://tzunami.com/opentext-content-server/}{Tzunami OpenText Content Server Exporter}}\textsubscript{WinForms, Rest API}}
+		\item {\textbf{\href{https://tzunami.com/opentext-content-server/}{Tzunami Content Server Exporter}}\textsubscript{WinForms, Rest API}}
 		\begin{itemize}
 			\item {It is easy-to-use and convenient solution to extract content from 'OpenText Content Server' via REST API. 'OpenText Content Server' migration solution allows extraction of all content within your local infrastructure. With the ability to connect remotely to the 'OpenText Content Server'}
 		\end{itemize}
-		\item {\textbf{\href{https://tzunami.com/pre-migration-analysis/}{Tzunami Pre-Migration Analyzer}}\textsubscript{WPF, Prism, SQL, Rest API}}
+		\item {\textbf{\href{https://tzunami.com/pre-migration-analysis/}{Tzunami Pre-Migration Analyzer}}\textsubscript{WPF, Prism, MS SQL, Oracle, Rest API}}
 		\begin{itemize}
 			\item {build a comprehensive, extensible, feature-rich utility tool for analysis of ECM system's data from the context of data migration to SharePoint capable of presenting the result in various graphical formats as well as exporting into tabular formats (excel, CSV)}
 		\end{itemize}
