static compiled date

--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -93,6 +93,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
  % {\today}
+  {JUNE 4, 2019}
   {Mahesh Kr. Yadav~~~·~~~Curriculum Vitae}
   {\thepage}
 
