--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -59,7 +59,7 @@
 % \photo{./examples/profile.png}
 \name{Mahesh Kr.}{Yadav}
 \position{Software Engineer R\&D}%{\enskip\cdotp\enskip}Security Expert}
-\address{Kirtipur, Kathmandu, Nepal}
+\address{Maitrinagar, Kalanki, Kathmandu, Nepal}
 
 \mobile{(+977) 9840060484} 
 \email{contact@maheshyadav.com.np}
